<resources>
    <string name="app_name">Klaser</string>
    <string name="app_login_name">收哪儿•登录</string>
    <string name="search_btn">&#xe67d;</string>
    <string name="add_btn">&#xe664;</string>
    <string name="message_btn">&#xe711;</string>
    <string name="user_btn">&#xe6a4;</string>
    <string name="home_btn">&#xe674;</string>
    <string name="activity_main_bottom_tab_home">物品收纳助手</string>
    <string name="activity_main_bottom_tab_search">存放助手</string>
    <string name="activity_main_bottom_tab_add">添加物品</string>
    <string name="activity_main_bottom_tab_message">系统消息</string>
    <string name="splash_title">收哪儿，您生活的好帮手</string>
</resources>